# test-cloud-vision-api-google

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
test_cloud_vision_api_google/: detect_properties.py
tests/: test_test_cloud_vision_api_google.py
